RESOLVED FIXED307036
RTCRtpSynchronizationSource.timestamp uses wrong time base
https://bugs.webkit.org/show_bug.cgi?id=307036
Summary RTCRtpSynchronizationSource.timestamp uses wrong time base
Ahmad Saleem
Reported 2026-02-04 20:58:27 PST
ssia - we are failing WPT uniquely for these.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-04 20:58:35 PST
Ahmad Saleem
Comment 2 2026-02-04 21:00:54 PST
EWS
Comment 3 2026-02-09 01:22:54 PST
Committed 307063@main (ade17394d9f3): <https://commits.webkit.org/307063@main> Reviewed commits have been landed. Closing PR #57924 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.